Modified ImprovedContextNbtProvider to use Set instead of ImmutableSet.